--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xingyan-danmu",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "panda.tv xingyan danmu module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -16,11 +16,12 @@
     "danmu"
   ],
   "dependencies": {
-    "md5": "*",
-    "request": "*",
-    "request-promise": "*",
+    "md5": "^2.2.1",
     "socks": "^2.1.2",
-    "socks-proxy-agent": "*"
+    "delay": "^2.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "socks-proxy-agent": "^3.0.1"
   },
   "author": "BacooTang",
   "license": "MIT",
